--- a/heavyaura/main/static/css/base.css
+++ b/heavyaura/main/static/css/base.css
@@ -94,3 +94,144 @@ h5 {
     margin-top: 210px;
     margin-bottom: 50px;
 }
+
+.home-card {
+    width: 200px;
+    height: 325px;
+    border: 1px solid #00000027;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    background-color: #fff;
+}
+
+.home-card:hover {
+    border: 1px solid #000;
+}
+
+.title-card {
+    max-width: 185px;
+    mask-type: 20px;
+    min-height: 70px;
+}
+
+.card-img {
+    width: 100%;
+    height: 200px;
+}
+
+.price {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: -10px;
+}
+
+.home-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 50px;
+    border: 1px solid #00000027;
+    border-radius: 5px;
+    background-image: url(../img/btnh.png);
+    transition: all 0.4s ease;
+    z-index: 2;
+}
+
+.home-btn:hover {
+    border: 1px solid #000;
+}
+
+.frame1 {
+    position: absolute;
+    right: -0.5%;
+    bottom: 47%;
+    z-index: -1;
+}
+
+.frame2 {
+    position: absolute;
+    left: -0.5%;
+    bottom: 47%;
+    z-index: -1;
+}
+
+.frame3 {
+    position: absolute;
+    left: -0.3%;
+    top: 100%;
+    z-index: -1;
+}
+
+.frame4 {
+    position: absolute;
+    right: -0.3%;
+    top: 100%;
+    z-index: -1;
+}
+
+.logogothic {
+    position: absolute;
+    left: 37%;
+    top: 6%;
+    width: 400px;
+    height: 300px;
+}
+
+/* .subtitlee {
+    position: absolute;
+    bottom: 0%;
+    left: 42%;
+} */
+
+.detail-image {
+    width: 650px;
+    height: 650px;
+}
+.detail-product {
+    margin: 80px;
+
+}
+
+.detail-description {
+    margin-left: 40px;
+    margin-top: 40px;
+}
+
+.detail-description p {
+    margin-top: 30px;
+    max-width: 700px;
+}
+
+.detail-description h2 span { 
+    font-size: 56px;
+}
+
+.cart-discount {
+    margin-top: -10px;
+    font-weight: 600;
+}
+
+.cart-discount .price {
+    margin-top: -1px;
+}
+
+.line {
+    opacity: 0.7;
+    text-decoration: line-through;
+    font-weight: 300;
+}
+
+.cart-btn {
+    width: 180px;
+    height: 50px;
+    border: 1px solid #00000027;
+    border-radius: 5px;
+    transition: all 0.4s ease;
+    z-index: 2;
+    margin-top: 20px;
+}
+
+.cart-btn:hover {
+    border: 1px solid #000;
+}
