--- a/heavyaura/main/templates/main/index/index.html
+++ b/heavyaura/main/templates/main/index/index.html
@@ -6,32 +6,34 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css\base.css' %}">
+
     <section class="home d-flex flex-column">
         <div class="home-title d-flex flex-column align-items-center">
             <a href="#" class="home-btn mt-4">ALL PRODUCTS</a>
         </div>
         <div class="home-recomendation">
             <div class="rec-title mb-4">
-                <h3><span>Poular Accessories</span></h3>
+                <h3><span>Poular Games</span></h3>
             </div>
         </div>
         <div class="home-cards d-flex gap-4">
             {% for product in products %}
-                <a href="{{product.get_absolute_url}}" class="home-card d-flex flex-column align-items-center">
+                <a href="{{ product.get_absolute_url }}" class="home-card d-flex flex-column align-items-center">
                     <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/noimage.jpg' %}{% endif %}" class="card-img" alt="">
-                    <h5 class="title-card">{{product.name}}</h5>
+                    <h5 class="title-card">{{ product.name }}</h5>
                     {% if product.discount %}
                         <div class="cart-discount d-flex gap-2">
-                            <p class="line">{{product.price}}</p>
-                            <p{{product.sell_price}}></p>
+                            <p class="line">{{ product.price }}</p>
+                            <p{{ product.sell_price }}></p>
                         </div>
                     {% else %}
-                        <p class="price">{{product.price}}</p>
+                        <p class="price">{{ product.price }}</p>
                     {% endif %}
                 </a>
             {% endfor %}
         </div>
     </section>
     <img src="{% static 'img/logogot.png' %}" class="logogothic" alt="">
-    <img src="{% static 'img/subtitlee.png' %}" class="subtitlee" alt="">
+    {% comment %} <img src="{% static 'img/subtitlee.png' %}" class="subtitlee" alt=""> {% endcomment %}
 {% endblock content %}
