--- a/heavyaura/main/templates/main/index/index.html
+++ b/heavyaura/main/templates/main/index/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="home-recomendation">
             <div class="rec-title mb-4">
-                <h3><span>Poular Games</span></h3>
+                <h3><span>Popular Games</span></h3>
             </div>
         </div>
         <div class="home-cards d-flex gap-4">
