--- a/heavyaura/main/templates/main/base.html
+++ b/heavyaura/main/templates/main/base.html
@@ -21,7 +21,7 @@
                         <a href="/" class="nav-a m-3">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-a m-3">Shop</a>
+                        <a href="{% url "main:product_list" %}" class="nav-a m-3">Shop</a>
                     </li>
                 </ul>
             </navbar>
@@ -37,10 +37,10 @@
         {% block content %}
         {% endblock content %}
     </div>
-    <img src="{% static 'img/frame1.png' %}" class="frame1" alt="">
+    {% comment %} <img src="{% static 'img/frame1.png' %}" class="frame1" alt="">
     <img src="{% static 'img/frame2.png' %}" class="frame2" alt="">
     <img src="{% static 'img/frame3.png' %}" class="frame3" alt="">
-    <img src="{% static 'img/frame4.png' %}" class="frame4" alt="">
+    <img src="{% static 'img/frame4.png' %}" class="frame4" alt=""> {% endcomment %}
 
 
 
